--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -11,12 +11,43 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
+<style>
+    body{
+        background-color: thistle;
+    }
+    .team-heading{
+        background-color: rgb(30, 30, 123);
+        color:papayawhip;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size:larger;
+        font-weight: bolder;
+    }
+    .card-header{
+        background-color: rgba(88, 88, 255, 0.639);
+        justify-content: center;
+        color:cornsilk;
+    }
+    .card-title{
+        align-content: center;
+        justify-content: center;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+    }
+    .card-body{
+        background-color: rgb(254, 254, 169);
+    }
+    .list-group-item{
+        background-color: antiquewhite;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: larger;
+    }
+</style>
 
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
+                <h1 class="text-center">My Team:</h1>
             </div>
         </div>
     </div>
@@ -25,40 +56,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">fil</h2>
+        <h2 class="card-title">Fil Smith</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
             <li class="list-group-item">Email: <a href="mailto:fil@mail.com">fil@mail.com</a></li>
-            <li class="list-group-item">Office number: 2</li>
+            <li class="list-group-item">Office number: 1123</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">farah</h2>
+        <h2 class="card-title">Farhin Chowdhury</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:farah@mail.com">farah@mail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/Farhaaa" target="_blank" rel="noopener noreferrer">Farhaaa</a></li>
+            <li class="list-group-item">ID: 03</li>
+            <li class="list-group-item">Email: <a href="mailto:farhin@mail.com">farhin@mail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/FarhinChowdhury" target="_blank" rel="noopener noreferrer">FarhinChowdhury</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">farhin</h2>
+        <h2 class="card-title">Farah Ahmed</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:farhin@mail.com">farhin@mail.com</a></li>
-            <li class="list-group-item">School: uoft</li>
+            <li class="list-group-item">Email: <a href="mailto:farah@gmail.com">farah@gmail.com</a></li>
+            <li class="list-group-item">School: York University</li>
         </ul>
     </div>
 </div>
